# RtSoftPractic

./: .gitmodules
RtSoftAutumnSchool_21/: .gitmodules
RtSoftAutumnSchool_21/Task1/: CMakeLists.txt  README.md
RtSoftAutumnSchool_21/Task1/Simple_shared_pointer_tests/: CMakeLists.txt  Simple_shared_pointer_tests.cpp
RtSoftAutumnSchool_21/Task2/: shema_src.vsdx  task.txt
RtSoftAutumnSchool_21/Task2/LeakFreeList_tests/: CMakeLists.txt  LeakFreeList_tests.cpp
RtSoftAutumnSchool_21/Task2/headers/: LeakFreeList.hpp
RtSoftAutumnSchool_21/Task3/: CMakeLists.txt  README.md  Task.txt  test_case_src.vsdx
RtSoftAutumnSchool_21/Task3/State_machine_tests/: CMakeLists.txt  StateMachine_tests.cpp
RtSoftAutumnSchool_21/Task3/headers/: StateMachine.hpp
RtSoftAutumnSchool_21/Task4/: CMakeLists.txt  README.md  Task.txt
RtSoftAutumnSchool_21/Task4/ThreadSafeBuffer_tests/: CMakeLists.txt  ThreadSafeBuffer_tests.cpp
RtSoftAutumnSchool_21/Task4/headers/: ThreadSafeBuffer.hpp
RtSoftAutumnSchool_21/Task4/src/: main.cpp
RtSoftAutumnSchool_21/Task5/: CMakeLists.txt  README.md
RtSoftAutumnSchool_21/Task5/Histogramm_tests/: CMakeLists.txt  Histogramm_tests.cpp
RtSoftAutumnSchool_21/Task5/headers/: Application.hpp  BarChart.hpp  BasicLogic.hpp  Constants.hpp  GenTimer.hpp  Gistoghramm.hpp  HistCalc.hpp  Message.hpp  Picture.hpp  ThreadSafeResBuffer.hpp  Utils.hpp
RtSoftAutumnSchool_21/Task5/headers/FileWriter/: FileWriter.hpp
RtSoftAutumnSchool_21/Task5/headers/ThreadPool/: Task.hpp  ThreadPool.hpp  UnboundedMpmcQueue.hpp
RtSoftAutumnSchool_21/Task5/src/: Application.cpp  BarChart.cpp  BasicLogic.cpp  FileWriter.cpp  Gistoghramm.cpp  Utils.cpp  main.cpp
RtSoftSpringSchool_21/: .gitmodules  VendorsCMake.bat
RtSoftSpringSchool_21/Task1/: CMakeLists.txt  Task1_BuildCMake.bat
RtSoftSpringSchool_21/Task1/Client/: CMakeLists.txt
RtSoftSpringSchool_21/Task1/Client/src/: main.cpp
RtSoftSpringSchool_21/Task1/Server/: ServerBuildCMake.bat
RtSoftSpringSchool_21/Task1/materials/: help.docx
RtSoftSpringSchool_21/Task2/: README.md
RtSoftSpringSchool_21/Task2/headers/: GithubParser.h  base64_decoder.h  multipart_parser.h
RtSoftSpringSchool_21/Task2/src/: multipart_parser.cpp
Rtsoft_task/Task1/: .travis.yml  README.md
Rtsoft_task/Task1/GenericForHashTable/: GenericForHashTable.sln
Rtsoft_task/Task1/GenericForHashTable/GenericForHashTable/: HashTableWrapper.cs
Rtsoft_task/Task1/GenericForHashTable/Tests/: Tests.csproj  UnitTest.cs
Rtsoft_task/Task2/: README.md  README.md.bak
Rtsoft_task/Task2/ClientApp/: ClientApp.sln  README.md
Rtsoft_task/Task2/ClientApp/ClientApp/: Client.cs  ClientApp.csproj  ConnectionPref.cs  IEventBus.cs  Program.cs  RemoteProcCommand.cs  Response.cs  ServiceDatas.cs
Rtsoft_task/Task2/ClientApp/ClientApp/Base/: IEventBus.cs  ServiceDatas.cs  SettingsManager.cs  ViewModelBase.cs
Rtsoft_task/Task2/ClientApp/ClientApp/Client/: Client.cs  ConnectionPref.cs  RemoteProcCommand.cs  Response.cs
Rtsoft_task/Task2/ClientApp/ClientApp/Models/: AbstractItem.cs  CommandsGroup.cs  Process.cs  Service.cs  ServiceFactory.cs
Rtsoft_task/Task2/ClientApp/ClientApp/Utils/: AbstractActor.cs  FileUtils.cs  SavePathRepo.cs  SettingsSaver.cs
Rtsoft_task/Task2/ClientApp/ClientView/: App.axaml  App.axaml.cs  ClientView.csproj  Program.cs  ViewLocator.cs
Rtsoft_task/Task2/ClientApp/ClientView/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Rtsoft_task/Task2/ClientApp/ClientView/Views/: MainWindow.axaml  MainWindow.axaml.cs
Rtsoft_task/Task2/Diagramms/: sequence_diagramm.pml.txt
Rtsoft_task/Task2/ServerApp/: README.md  ServerApp.sln
Rtsoft_task/Task2/ServerApp/ServerApp.Console/: Program.cs  ServerApp.Cons.csproj
Rtsoft_task/Task2/ServerApp/ServerApp.Core/: ConnectedClient.cs  CoreEntryPoint.cs  IEventBus.cs  ObjectState.cs  ServerApp.Core.csproj  ServerAppCoreEntryPointCfg.cs  SocketPrefs.cs  TcpServer.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Commands/: IRemoteCmd.cs  RemoteComdsImpl.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Extentions/: CommandExtentions.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Interfaces/: IConnectedClient.cs  IEventBus.cs  IServerApplication.cs  ISocketPrefs.cs  ITcpServer.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Modules/: CommandsModule.cs  ContainerOfModulesBase.cs  MqttModule.cs  ServerModule.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Mqtt/: MqttBrocker.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/Server/: ConnectedClient.cs  IEventBus.cs  Response.cs  ServerApplication.cs  SocketPrefs.cs  StatCodes.cs  TcpServer.cs
Rtsoft_task/Task2/ServerApp/ServerApp.Core/TcpServer/: ConnectedClient.cs  IEventBus.cs  Response.cs  TcpServer.cs
Rtsoft_task/Task2/ServerApp/ServerTests/: ServerTests.csproj
Rtsoft_task/Task2/ServerApp/ServerTests/Configs/: StubTestServerCfg.cs  TestServerCfg.cs
Rtsoft_task/Task2/ServerApp/ServerTests/Modules/: TestCommandModule.cs  TestTcpClientModule.cs
Rtsoft_task/Task2/ServerApp/ServerTests/Tests/: IntegUnitTests.cs  StubUnitTests.cs
Rtsoft_task/Task2/ServerApp/SysMonitor/: CPUServiceMonitor.cs  DeviceFactory.cs  ISysMonitorsPool.cs  SocketPrefs.cs  SysMonitor.csproj  SysMonitorModule.cs  SysMonitorsPool.cs  Utils.cs
Rtsoft_task/Task2/ServerApp/SysMonitor/Devices/: CpuTemp.cs  CpuTime.cs  IMqqtMessageSender.cs  MqqtCPUServiceMonitor.cs  MqqtCPUTemperatureMonitor.cs  (+2 more)
Rtsoft_task/Task2/documents/: InstructionToDeployingSimpleService.doc
Task1/: BuildCMake.bat  README.md
Task1/Client/: ClientBuildCMake.bat
Task1/Server/: CMakeLists.txt
Task1/Server/src/: main.cpp
Task2/: CMakeLists.txt
Task2/headers/: GithubParser.h
Task2/src/: GithubParser.cpp  base64_decoder.cpp  main.cpp
Task4/: CMakeLists.txt  README.md
Task4/LeakFreeList_tests/: LeakFreeList_tests.cpp
Task4/headers/: LeakFreeList.hpp
Task4/src/: main.cpp
task3/: CMakeLists.txt  Shared_ptr.bat  simple_shared_pointr_impl.hpp
task3/Simple_shared_pointer_tests/: CMakeLists.txt  Simple_shared_pointer_tests.cpp
task3/headers/: simple_shared_pointr_impl.hpp
(+15 files in other folders)
